--- a/personajes.html
+++ b/personajes.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300&family=Open+Sans:wght@300&display=swap" rel="stylesheet">
-<link rel="icon" href="image/pikachu.png" type="image/x-icon">
+<link rel="icon" href="image/pokebola.png" type="image/x-icon">
 
 </head>
 <body>
